add week5 starter

--- a/week5/starter/index.html
+++ b/week5/starter/index.html
@@ -14,12 +14,6 @@
       </div>
     </div>
     <div class="row mb-3">
-        <!-- <div id="category" class="col">
-          <button class="btn btn-light btn-sm rounded-0 m-0">All</button>
-          <button class="btn btn-light btn-sm rounded-0">T-Shirts</button>
-          <button class="btn btn-light btn-sm rounded-0">Shorts</button>
-          <button class="btn btn-light btn-sm rounded-0">Accessories</button>
-        </div> -->
         <ul id="categories"class="nav category-list">
           <li class="nav-item">
             <a href="#"  class="nav-link btn btn-light btn-sm rounded-0 mx-1">All</a>
@@ -37,7 +31,14 @@
     </div>
     <!-- Products -->
     <div class="row" id="products">
-        
+      <div class="col col-12 col-md-6 col-lg-4 p-3 bg-light">
+          <img class="img-fluid" src="images/blue-t-shirt.jpg" alt="Blue T-Shirt" />
+          <h2>Blue T-Shirt</h2>
+          <div class="d-flex justify-content-between">
+              <p><strong><em>$7.99</em></strong></p>
+              <button class="btn btn-secondary rounded-0">Buy</button>
+          </div>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
